# analysis_tools

./: .gitignore  Makefile.am  README  configscr  configure.ac  makefile
1dFlashMovie/: Makefile.am
FitViz/: makefile
MSDBMgr/: makefile
OSCIn-SuShI/: .~lock.results.csv#  makefile  temp.spc
SuShI/: Makefile.am
SuShI/FitViz/: Makefile.am
SuShI/FitViz/include/: FitViz.hpp
SuShI/FitViz/src/: Fit_Viz_UI.cpp  Fit_Viz_gfx.cpp  Fit_Viz_misc.cpp
SuShI/OSCIn-SuShI/: Makefile.am
SuShI/OSCIn-SuShI/include/: OSCIn-SuShI.hpp
SuShI/OSCIn-SuShI/src/: OSCIn-SuShI.cpp  OS_UI.cpp  OS_gfx.cpp  OS_misc.cpp
SuShI/densprof/: Makefile.am
SuShI/densprof/src/: dens_profiles.cpp
SuShI/genjsonfit/: Makefile.am
SuShI/genjsonfit/src/: gen_json_fit_list.cpp
SuShI/gentardis/: Makefile.am
SuShI/gentardis/src/: gentardis.cpp
SuShI/multiion/: Makefile.am
SuShI/multiion/src/: multiion_spectra.cpp
SuShI/mve/: Makefile.am
SuShI/mve/src/: model_vel_evolution.cpp
Vega_filters/: Makefile.am
abundance/: Makefile.am  configure.ac
abundance/data/: CO_Rich.csv  CO_Rich_Ca_0p63.csv  CO_Rich_Ca_10.csv  CO_Rich_Ca_100.csv  CO_Rich_Ca_1000.csv  CO_Rich_Ca_10000.csv  CO_Rich_Ca_100000.csv  CO_Rich_Ca_1000000.csv  CO_Rich_Ca_10000000.csv  CO_Rich_Ca_16.csv  CO_Rich_Ca_1p6.csv  CO_Rich_Ca_2p5.csv  CO_Rich_Ca_4p0.csv  CO_Rich_Ca_6p3.csv  He_Solar.csv  He_Solar_Ca_10.csv  He_Solar_Ca_100.csv  He_Solar_Ca_1000.csv  He_Solar_Ca_10000.csv  He_Solar_Ca_1p6.csv  He_Solar_Ca_2p5.csv  He_Solar_Ca_4p0.csv  He_Solar_Ca_6p3.csv  Seitenzahl_2013_N1.csv  Seitenzahl_2013_N10.csv  Seitenzahl_2013_N100.csv  Seitenzahl_2013_N100H.csv  Seitenzahl_2013_N100L.csv  Seitenzahl_2013_N100_Z0p01.csv  Seitenzahl_2013_N100_Z0p1.csv  Seitenzahl_2013_N100_Z0p5.csv  Seitenzahl_2013_N150.csv  Seitenzahl_2013_N1600.csv  Seitenzahl_2013_N1600C.csv  Seitenzahl_2013_N20.csv  Seitenzahl_2013_N200.csv  Seitenzahl_2013_N3.csv  Seitenzahl_2013_N300C.csv  Seitenzahl_2013_N40.csv  Seitenzahl_2013_N5.csv  (+33 more)
abundance/include/: abundance.h
abundance/src/: abundance_list.cpp
compositions/: Makefile.am
compositions/data/: Seitenzahl_N100_2013.csv
compositions/include/: compositions.h
compositions/src/: compositions.cpp  saha_test.cpp
epsplot/: Makefile.am  configure.ac
epsplot/include/: eps_plot.h
epsplot/src/: ep_axis.cpp  ep_color.cpp  ep_color_class.cpp  ep_epsfile.cpp  ep_errorbar.cpp  ep_legend.cpp  ep_legend_entry.cpp  ep_lineplot.cpp  ep_plot3d.cpp  ep_rectangle.cpp  ep_stipple.cpp  ep_stipple_class.cpp  ep_symbol.cpp  ep_symbol_type.cpp  ep_text.cpp  ep_text_processing.cpp  eps_plot.cpp  testeps.cpp
equivwidth/: Makefile.am
equivwidth/src/: equivalentwidth.cpp
es_gaussian/: Makefile.am
es_gaussian/src/: gaussian_profile.cpp
esplot/: Makefile.am  configure.ac
esplot/include/: Plot_Utilities.h
genplot/: Makefile.am
genplot/data/: genplots.dtd  snatk-genplots.dtd
genplot/src/: genplot.cpp
include/: OSC.hpp  Plot_Utilities.h  best_fit_data.h  compositions.h  eps_plot.h  kurucz_data.h  line_routines.h  model_spectra_db.h  opacity_profile_data.h  opacity_project_pp.h  specfit.h  state_pops.h  velocity_function.h
kurucz_data/: Makefile.am  configure.ac
linerout/: Makefile.am  configure.ac
linerout/data/: CO_Rich_Abundance.csv  Solar_Abundance.csv
linerout/include/: line_routines.h
linerout/src/: ion_cs_test.cpp  line_routines.cpp  line_routines_abundance_list.cpp  line_routines_ccm_dered.cpp  line_routines_equivalent_width.cpp  line_routines_find_flux.cpp  line_routines_find_minimum.cpp  line_routines_get_norm_const.cpp  line_routines_photoionization_rate.cpp  line_routines_radiation.cpp  line_routines_refine_prep.cpp  line_routines_stats.cpp  line_routines_volume.cpp
linfit/: Makefile.am
m4/: acx_locallib.m4
max/: Makefile.am
min/: Makefile.am
msdb/: Makefile.am  configure.ac
msdb/include/: model_spectra_db.h
msdb/src/: model_spectra_db.cpp
opacity_project/: Makefile.am  configure.ac
opacity_project/data/: c03.03  c04.02  c04.03  c05.02  c05.03  c05.04  c06.03  c06.04  c06.05  c06.06  c07.02  c07.07  c08.02  c08.05  c08.07  c08.08  c09.02  c09.03  c09.04  c09.06  c09.07  c09.08  c09.09  c10.03  c10.04  c10.06  c10.10  c11.03  c11.04  c11.05  c11.08  c12.03  c12.05  c12.11  c13.02  c13.05  c13.08  c13.12  c13.13  c14.02  (+662 more)
opacity_project/include/: opacity_project_pp.h
opacity_project/src/: opacity_project_pp.cpp  ope_Find_State.cpp  ope_Get_Ionization_Rate.cpp  ope_Get_Recombination_Rate.cpp  ope_Get_Transition.cpp  ope_Read_Element_Data.cpp  ope_clear.cpp  opi_Calc_Ionizing_Rate.cpp  opi_Calc_Recombination_Rate.cpp  opi_Find_State.cpp  opi_Get_State_Configuration.cpp  opi_Read_Data.cpp  opi_constructors.cpp  opld_constructors.cpp  opld_operators.cpp  ops_constructors.cpp  ops_operators.cpp  opt_Calculate_Derived_Quantities.cpp  testOPP.cpp
osc/: Makefile.am  configure.ac
osc-extract/: .gitignore  Makefile.am
osc/include/: OSC.hpp
osc/src/: libOSC.cpp
plot-tardis-abundance/: .gitignore  Makefile.am
plot-tardis-abundance/src/: plot-tardis-abundance.cpp
plotspectrum/: Makefile.am
radiation/: .gitignore  Makefile.am  configure.ac
radiation/include/: radiation.h
radiation/src/: testrad.cpp
share/: Seitenzahl_N100_2013_Ca_Rich.csv  genplots.dtd  (+5 more)
statepop/: Makefile.am  configure.ac
statepop/include/: sp_config.h  statepop.h
statepop/src/: state_pop_Find_Equivalent_Level.cpp  state_pop_Find_Equivalent_Recombined_Levels.cpp  state_pop_Generate_Matrix.cpp  state_pop_Get_Boltzmann_Populations.cpp  state_pop_Get_Populations.cpp  state_pop_Get_Relative_Line_Strengths.cpp  state_pop_Get_Saha_Populations.cpp  state_pop_Set_Param.cpp  state_pop_lib_Get_Relaxational_Populations.cpp  state_pop_lib_ang_mom.cpp  state_pop_lib_get_def_cfg.cpp  state_pop_lib_ion_rec_eqv.cpp  state_pop_lib_prt_cfg_vect.cpp  state_pop_lib_read_K_state.cpp  state_pop_lib_read_OP_state.cpp  state_pops.cpp
testmsdb/: Makefile.am
testmsdb/src/: msdb_test.cpp
velocityfield/: Makefile.am  configure.ac
velocityfield/include/: velocity_function.h
velocityfield/src/: velfntest.cpp
(+1336 files in other folders)
