#astroion is in the process of being redone; until then this won't compile

#AUTOMAKE_OPTIONS = foreign subdir-objects
#AM_CPPFLAGS = -I${srcdir}/include ${xastro_CFLAGS} ${linerout_CFLAGS}

#lib_LTLIBRARIES = libcompositions.la
#libcompositions_la_SOURCES =  src/compositions.cpp

#bin_PROGRAMS = sahatest
#sahatest_SOURCES = src/saha_test.cpp
#sahatest_LDADD = -lcompositions ${xastro_LIBS} ${linerout_LIBS}

#include_HEADERS = include/compositions.h

# Install the pkg-config file; the directory is set using
# PKG_INSTALLDIR in configure.ac.
#pkgconfig_DATA = ${PACKAGE_NAME}-${API_VERSION}.pc


