#astroion is in the process of being redone; until then this won't compile

#AUTOMAKE_OPTIONS = foreign subdir-objects
#AM_CPPFLAGS = -I${srcdir}/include ${es_CFLAGS} ${epsplot_CFLAGS} ${linerout_CFLAGS} ${xmath_CFLAGS} ${xastro_CFLAGS} ${xio_CFLAGS} ${xstdlib_CFLAGS}

#bin_PROGRAMS = multiion

#multiion_SOURCES = src/multiion_spectra.cpp
#multiion_LDADD = ${es_LIBS} ${epsplot_LIBS} ${linerout_LIBS} ${xmath_LIBS} ${xastro_LIBS} ${xio_LIBS} ${xstdlib_LIBS} #-lcomp


